enhancement: allow to choose identity type for customer (LMS+ #1625)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -3,6 +3,7 @@ $Id$
 version 27-git (????-??-??):
 
   - enhancement: require user selection in event(add/edit) forms, (variable: phpui.event_user_required, default: not set) [interduo]
+  - enhancement: allow to choose identity type for customer [ravvar]
 
 version 26.0 (2020-12-15):
 
