enhancement: add possibility to switch via button between timetable and scheduler with preserved filter settings

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -10,6 +10,8 @@ version 27-git (????-??-??):
     to control events displaying in customer timetable [ravvar]
   - improvement: improvement: add support to scheduler form filter which allows
     display only events which are simultaneously assigned to many users [ravvar]
+  - add possibility to switch via button between timetable and scheduler
+    with preserved filter settings [ravvar]
 
 version 26.0 (2020-12-15):
 
