--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -10,8 +10,10 @@ version 27-git (????-??-??):
     to control events displaying in customer timetable [ravvar]
   - improvement: improvement: add support to scheduler form filter which allows
     display only events which are simultaneously assigned to many users [ravvar]
-  - add possibility to switch via button between timetable and scheduler
+  - enhancement: add possibility to switch via button between timetable and scheduler
     with preserved filter settings [ravvar]
+  - enhancement: allow to control period alignment for assignment bulk creation basing on promotion
+    schema [chilan]
 
 version 26.0 (2020-12-15):
 
