improvement: 'invoices.customer_credentials_format' specifies userpanel credentials format presented on TCPDF invoices (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -15,6 +15,8 @@ version 27-git (????-??-??):
   - enhancement: allow to control period alignment for assignment bulk creation basing on promotion
     schema - 'phpui.default_assignment_align_periods' configuration variable control this mechanism
     ('true' by default to mimic previous behavior) [chilan]
+  - improvement: 'invoices.customer_credentials_format' specifies userpanel credentials format
+    presented on TCPDF invoices [chilan]
 
 version 26.0 (2020-12-15):
 
