improvement: MD5 encrypted user password support - this allows to use password imported from external systems such as Pyxis4SQL (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -17,6 +17,8 @@ version 27-git (????-??-??):
     ('true' by default to mimic previous behavior) [chilan]
   - improvement: 'invoices.customer_credentials_format' specifies userpanel credentials format
     presented on TCPDF invoices [chilan]
+  - improvement: MD5 encrypted user password support - this allows to use password imported
+    from external systems such as Pyxis4SQL [chilan]
 
 version 26.0 (2020-12-15):
 
