enhancement: allow to search customers by different consent states (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -24,6 +24,7 @@ version 27-git (????-??-??):
   - improvement: change the management of assigned users in the event
     for disabled or deleted users [ravvar]
   - improvement: allow to change recipient address during invoice note create or edit [chilan]
+  - enhancement: allow to search customers by different consent states [chilan]
 
 version 26.0 (2020-12-15):
 
