enhancement: introduce support for customer email address properties to support EPIX MdO (LMS+ #1224)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -43,6 +43,7 @@ version 27-git (????-??-??):
   - improvement: 'phpui.nodepassword_required' allows to make password required
     or recommended ('false' by default) [chilan]
   - enhancement: allow to change ports in network link properties popup [chilan]
+  - enhancement: introduce support for customer email address properties to support EPIX MdO [ravvar]
 
 version 26.0 (2020-12-15):
 
