--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -39,6 +39,7 @@ version 27-git (????-??-??):
   - improvement: 'phpui.ui_lang' setting allow to force UI language selection [chilan]
   - improvement: changed default value of 'phpui.promotion_preserve_at_day' from 'false'
     to 'true' [chilan]
+  - improvement: allow to check/uncheck all consent checkboxes with single click [chilan]
 
 version 26.0 (2020-12-15):
 
