--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -40,6 +40,8 @@ version 27-git (????-??-??):
   - improvement: changed default value of 'phpui.promotion_preserve_at_day' from 'false'
     to 'true' [chilan]
   - improvement: allow to check/uncheck all consent checkboxes with single click [chilan]
+  - improvement: 'phpui.nodepassword_required' allows to make password required
+    or recommended ('false' by default) [chilan]
 
 version 26.0 (2020-12-15):
 
