--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -43,6 +43,7 @@ version 27-git (????-??-??):
   - improvement: 'phpui.nodepassword_required' allows to make password required
     or recommended ('false' by default) [chilan]
   - enhancement: allow to change ports in network link properties popup [chilan]
+  - enhancement: number plan user assignment support [chilan]
 
 version 26.0 (2020-12-15):
 
