--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -48,6 +48,7 @@ version 27-git (????-??-??):
   - enhancement: 'rt.detect_customer_location_address' controls location address automatic detection
     of newly created helpdesk ticket ('false' by default) [chilan]
   - enhancement: more customer balance substitution symbol support in add message form [chilan]
+  - improvement: 'invoices.default_printpage' default value changed to 'original' [chilan]
 
 version 26.0 (2020-12-15):
 
