--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -58,6 +58,7 @@ version 27-git (????-??-??):
   - improvement: 'phpui.default_show_expired_assignments' controls if expired assignments are presented
     by default (default value: 'false') [chilan]
   - improvement: changed default value of 'phpui.newticket_notify' from 'false' to 'true' [chilan]
+  - enhancement: new node list filter - nodes with locks [chilan]
 
 version 26.0 (2020-12-15):
 
