improvement: add 'phpui.supported_currencies' setting that specifies the list of available currencies identified by ISO symbols (LMS+ #1649)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -60,6 +60,8 @@ version 27-git (????-??-??):
   - improvement: changed default value of 'phpui.newticket_notify' from 'false' to 'true' [chilan]
   - enhancement: new node list filter - nodes with locks [chilan]
   - improvement: show lock icon on node list when given node has active lock in schedule [chilan]
+  - improvement: add 'phpui.supported_currencies' setting that specifies the list of available currencies
+    identified by ISO symbols [ravvar]
 
 version 26.0 (2020-12-15):
 
