--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -65,6 +65,8 @@ version 27-git (????-??-??):
   - improvement: added source filter on queue content view [chilan]
   - enhancement: source accounts are stored in cash import records; customers can be matched by earlier
     cash import record source customers accounts during source file parsing process [chilan]
+  - enhancement: 'cashimport.source_account_match_threshold_days' (default '0' value) controls how many
+    days in cash import history are taken into account to match customer [chilan]
 
 version 26.0 (2020-12-15):
 
