--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -69,6 +69,7 @@ version 27-git (????-??-??):
     days in cash import history are taken into account to match customer [chilan]
   - enhancement: allow to instantly switch user or login as different user ('admin#targetuser' in login form
     and button click on user list or user info) [chilan]
+  - improvement: enabled visual editor for userpanel help topic bodies [chilan]
 
 version 26.0 (2020-12-15):
 
