--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -83,6 +83,7 @@ version 27-git (????-??-??):
   - enhancement: 'phpui.node_login_regexp' ('^[_a-z0-9-.]+$' by default) controls node login
     format [chilan]
   - enhancement: added period filter in customer assignment tab/box [chilan]
+  - enhancement: added support to store mac addresses in network device [ravvar]
 
 version 26.0 (2020-12-15):
 
