enhancement: added 'without group' value in node list group filter (changelog entry added)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -85,6 +85,7 @@ version 27-git (????-??-??):
   - enhancement: added period filter in customer assignment tab/box [chilan]
   - enhancement: added support to store mac addresses in network device [ravvar]
   - enhancement: add support for configuration export to sql file [ravvar]
+  - enhancement: added 'without group' value in node list group filter [chilan]
 
 version 26.0 (2020-12-15):
 
