--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -95,6 +95,7 @@ version 27-git (????-??-??):
   - enhancement: invoice/debit note send via mail multi division frontend support [chilan]
   - enhancement: show address type (icon-based) in location selection of promotion schema based version of
     assignment panel [chilan]
+  - improvement: %date-y, %date-m, %date-d symbol support in message add form [chilan]
 
 version 26.0 (2020-12-15):
 
