improvement: customer flag filter in customer list form (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -99,6 +99,7 @@ version 27-git (????-??-??):
   - improvement: automatically select customer in ticket add form when we move to this from from network
     device which is owned by customer [chilan]
   - improvement: added supplier flag for customer - can be usefull for warehouse [chilan]
+  - improvement: customer flag filter in customer list form [chilan]
 
 version 26.0 (2020-12-15):
 
