improvement: date period selector added in node session list filter

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -110,6 +110,7 @@ version 27-git (????-??-??):
     for given user [chilan]
   - enhancement: more comprehensive filtering in billinglist (divide one voipaccount
     filter into two filters: customer,voipaccount) [interduo]
+  - improvement: date period selector added in node session list filter [chilan]
 
 version 26.0 (2020-12-15):
 
