--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -120,6 +120,7 @@ version 27-git (????-??-??):
     assignments (even those which will start in future) [chilan]
   - improvement: show customer phone contacts in event info views [chilan]
   - enhancement: added service type selection in invoice report [chilan]
+  - improvement: allow to search nodes using status criterion [chilan]
 
 version 26.0 (2020-12-15):
 
